# statmodel

./: .gitignore  3.15 模型部分大纲.md  TODO  main.py  outline.md  part2.md  pyproject.toml  参考文献.md  模型部分大纲.md  统计建模大纲.docx
DLinear/: dlinear.py  model_stacking.py  simple_dlinear.py  xgboost_model.py
data/: all_data_cleaned.xlsx  all_data_cleaned_with_scores.xlsx  all_data_cleaned_with_scores_sorted_valid_only.xlsx  all_scores_time_decayed.xlsx  daily.xlsx  daily_scores_summary_standardized.xlsx  final_data.csv  jsonline_example.json  long_comments.xlsx  scored_comments.csv  scored_comments.jsonl  scored_comments_all.jsonl  scored_comments_part2.jsonl  short_comments_cleaned.xlsx
long_comments_ana/: deal_with_api.py
paper/: Part2.docx  part2.md  ~$Part2.docx  第一部分插图.docx  论文正式(1).docx  论文正式.docx
scripts/: beta_distribution.py  correlation.py  deal_with_api.py  entropy.py  multi_score_time_decay.py  short_comments.py  stl_decompose.py  write_back.py
